[project]
  name = "pulumi_ovh"
  description = "A Pulumi package for creating and managing OVH resources."
  dependencies = ["parver>=0.2.1", "pulumi>=3.0.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11; python_version < \"3.11\""]
  keywords = ["pulumi", "ovh", "category/cloud"]
  readme = "README.md"
  requires-python = ">=3.9"
  version = "2.0.0a0+dev"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://www.pulumi.com"
    Repository = "https://github.com/ovh/pulumi-ovh"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_ovh = ["py.typed", "pulumi-plugin.json"]
